Margin fixes for the icon of the selected type in dropdown type selectors.
Required by cocktail changeset 5a56b054275e.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1484,6 +1484,7 @@ body.scripted .BackOfficeLayout .selector:hover .selector_content {
 
 .BackOfficeLayout .ContentTypeSelector > .button > .label > * {
     vertical-align: middle;
+    margin-right: 0.4em;
 }
 
 .BackOfficeLayout .ContentTypeSelector .palette > .palette_group > .nested_groups {
