Added the Change.is_explicit_change member.
This member makes it possible to distinguish between changes explicitly
initiated by users, and changes based on side effects (frequent when relating
or deleting objects).

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1881,6 +1881,10 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     color: #900;
 }
 
+.BackOfficeChangeLogView .change_entry.explicit .change_action_label {
+    font-weight: bold;
+}
+
 /* Notifications
 -----------------------------------------------------------------------------*/
 .BackOfficeLayout .notification_box {
