Make the show_element_in_listings option hide the column instead of excluding it.
This fixes a regression in ItemSelector, which relied on the existence of the
"element" column.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -925,6 +925,10 @@ body.scripted .BackOfficeLayout .Table .row_selection_control {
     cursor: default;
 }
 
+.BackOfficeLayout .ContentTable.hidden_element_column .element_column {
+    display: None;
+}
+
 .BackOfficeLayout .ContentTable .ItemLabel {
     display: inline-block;
 }
