--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -437,18 +437,15 @@ body.modal {
 
 .ItemSelector-frame,
 .dialog {
-    border: none;
-    background-color: white;
-    box-shadow: 3px 3px 7px #666;
-}
-
-.ItemSelector-frame {
     z-index: 10001;
+    border: none;
     position: fixed;
-    width: 92%;
-    height: 92%;
     top: 4%;
     left: 4%;
+    width: 92%;
+    height: 92%;
+    background-color: white;
+    box-shadow: 3px 3px 7px #666;
 }
 
 .dialog {
@@ -3611,11 +3608,11 @@ div.success_label {
     height: auto;
 }
 
-.BackOfficeLayout .Dialog .dialog_header {
-    padding: 0.9em 0;
+.Dialog.diff_dialog .dialog_header {
+    padding: 0.6em 0;
 }
 
-.BackOfficeLayout .Dialog .dialog_heading {
+.Dialog.diff_dialog .dialog_heading {
     font-size: 1.2em;
 }
 
