Fixed the selectable behavior for types with show_element_in_listings = False.
Using display: none to hide the "Element" column broke several aspects of the
selectable behavior that relied on the hidden checkboxes receiving focus (for
example, key bindings). Use absolute position instead.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -980,7 +980,8 @@ body.scripted .BackOfficeLayout .Table .row_selection_control {
 }
 
 .BackOfficeLayout .ContentTable.hidden_element_column .element_column {
-    display: None;
+    position: absolute;
+    left: -10000px;
 }
 
 .BackOfficeLayout .ContentTable .ItemLabel {
