--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -557,6 +557,10 @@ body.modal {
     padding: 0.5em;
 }
 
+.BackOfficeLayout .Form .control[cocktail-editable='read_only'] {
+    color: #555;
+}
+
 .BackOfficeLayout .field input.control,
 .BackOfficeLayout .field textarea.control,
 .BackOfficeLayout .field select.control,
